--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -129,7 +129,7 @@
                     <div class="userImg">
                         <img src="alexa.jpeg" alt="">
                     </div>
-                    <h4 class="username">To: My friend 🤍<span class="underline"></span></h4>
+                    <h4 class="username">To: Alexandra🤍<span class="underline"></span></h4>
 
                     <h3>Happy Birthday</h3>
                     <div class="imageCute">
@@ -139,8 +139,12 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2>males ah bikin kata katanya wkwkwk btw selamat habede ya temanku semoga tahun ga banyak sare jadi orang yang berguna dan makin gelo dan selamat tahun baru WYATB</h2>
-
+                        <h2>Dear Alexa today a wish you a Happy Birthday where once a year you are celebrated for the light and joy that you are and for 
+                                the light that you bring to the world to see you achieve your younger self dreams to see you the sparkle in your eyes when you
+                                 talk obout your love and you passions and when you speak out loud your aspirations all 
+                                i wish is for you to achieve your dreams and goals to be happy and loved everyday 
+                                and for those days that aren't so happy and full of rainbows and may you Always stay by my side i'll
+                                 always be there for you Alexa Happy Birthday. <P>-Roby & Logika-</P></h2>
                         <div class="imageCute2">
                             <img src="cute2.png" alt="">
                         </div>
